# NeMo-Retriever

./: Dockerfile  README.md  WALKTHROUGHS.md
config/: custom_summarization_pipeline.yaml  (+1 more)
nemo_retriever/: README.md  pyproject.toml
nemo_retriever/dev/compose/: README.md  service-mode.compose.yaml  service-mode.local-models.compose.yaml
nemo_retriever/dev/compose/presets/: local-models.env  nim-answer.env  nim-audio.env  nim-caption.env  nims-core.env  observability.env
nemo_retriever/developer_docs/: README.md  harness_retriever_ingest_query_prd.md  nimclient.md  root_ingest_cli_design.md
nemo_retriever/docs/cli/: README.md  benchmarking.md
nemo_retriever/harness/: EXPECTED_RESULTS.md  HANDOFF.md  README.md  dataset_paths.example.yaml
nemo_retriever/harness/examples/: managed-helm-main.yaml
nemo_retriever/harness/runfiles/: jp20_beir.json  vidore_v3_computer_science_beir.json  vidore_v3_energy_beir.json  vidore_v3_finance_fr_beir.json  vidore_v3_hr_beir.json  vidore_v3_industrial_beir.json  vidore_v3_pharmaceuticals_beir.json  vidore_v3_physics_beir.json
nemo_retriever/helm/: README.md  values.yaml
nemo_retriever/helm/templates/: configmap.yaml  deployment-vectordb.yaml  deployment.yaml
nemo_retriever/src/nemo_retriever/cli/: evidence.py  main.py
nemo_retriever/src/nemo_retriever/cli/ingest/: app.py  graph_commands.py  options.py  service.py
nemo_retriever/src/nemo_retriever/cli/pipeline/: __main__.py
nemo_retriever/src/nemo_retriever/cli/query/: app.py  options.py
nemo_retriever/src/nemo_retriever/common/: input_files.py  policy.py  ray_resource_hueristics.py
nemo_retriever/src/nemo_retriever/common/api/util/image_processing/: table_and_chart.py
nemo_retriever/src/nemo_retriever/common/io/: __init__.py
nemo_retriever/src/nemo_retriever/common/modality/: table_and_chart.py
nemo_retriever/src/nemo_retriever/common/modality/ocr/: shared.py
nemo_retriever/src/nemo_retriever/common/params/: __init__.py  models.py  utils.py
nemo_retriever/src/nemo_retriever/common/schemas/: pipeline_spec.py
nemo_retriever/src/nemo_retriever/common/vdb/: README.md  adt_vdb.py  lancedb.py  lancedb_bulk.py  records.py
nemo_retriever/src/nemo_retriever/graph/: README.md  graph_pipeline_registry.py  ingestor_runtime.py  pipeline_graph.py  retriever.py
nemo_retriever/src/nemo_retriever/harness/: artifact_writer.py  beir_runner.py  benchmark_registry.py  cli.py  config.py  contracts.py  dataset_paths.py  diff.py  environment.py  execution.py  helm_config.py  helm_manager.py  helm_runner.py  json_io.py  metric_gates.py  resolution.py  runfile.py  runsets.py  slack.py
nemo_retriever/src/nemo_retriever/harness/portal/: app.py
nemo_retriever/src/nemo_retriever/ingest/: plan.py  service.py
nemo_retriever/src/nemo_retriever/ingestor/: graph_ingestor.py  results.py
nemo_retriever/src/nemo_retriever/models/: hf_model_registry.py  warmup_registry.py
nemo_retriever/src/nemo_retriever/models/inference/: main_text_embed.py  runtime.py  shared.py
nemo_retriever/src/nemo_retriever/models/llm/: __init__.py  text_utils.py  types.py
nemo_retriever/src/nemo_retriever/models/llm/clients/: __init__.py  judge.py  litellm.py
nemo_retriever/src/nemo_retriever/models/llm/tasks/: __init__.py  base.py  generic.py  rag_answer.py  summarize.py
nemo_retriever/src/nemo_retriever/models/local/: __init__.py
nemo_retriever/src/nemo_retriever/models/nim/util/: __init__.py
nemo_retriever/src/nemo_retriever/operators/: __init__.py  vdb.py
nemo_retriever/src/nemo_retriever/operators/embed/: cpu_operator.py  text_embed.py
nemo_retriever/src/nemo_retriever/operators/extract/ocr/: cpu_ocr.py  gpu_ocr.py
nemo_retriever/src/nemo_retriever/operators/extract/table/: cpu_actor.py
nemo_retriever/src/nemo_retriever/operators/extract/video/: ocr_actor.py
nemo_retriever/src/nemo_retriever/operators/generation/: __init__.py  base.py  generic.py  summarization.py
nemo_retriever/src/nemo_retriever/operators/graph_ops/: multi_type_extract_operator.py  store_operator.py
nemo_retriever/src/nemo_retriever/query/: agentic.py  agentic_options.py  evidence.py  options.py  shaping.py  workflow.py
nemo_retriever/src/nemo_retriever/service/: app.py  auth.py  cli.py  config.py  mcp_server.py  query_schema.py  retriever-service.yaml  service_ingestor.py  vectordb_app.py
nemo_retriever/src/nemo_retriever/service/routers/: ingest.py
nemo_retriever/src/nemo_retriever/service/services/: job_tracker.py  pipeline_executor.py  pipeline_pool.py  prometheus.py  worker_result_store.py
nemo_retriever/src/nemo_retriever/service/utils/: file_type.py
nemo_retriever/src/nemo_retriever/tools/evaluation/: README.md  config.py  generation.py  runner.py
nemo_retriever/src/nemo_retriever/tools/recall/: beir.py  vdb_recall.py
nemo_retriever/tests/: test_actor_operators.py  test_agentic_eval.py  test_caption.py  test_cpu_module_import_safety.py  test_embed_params.py  test_evaluation_config.py  test_generation_hardening.py  test_generation_tasks.py  test_graph_ingestion_error_diagnostics.py  test_graph_pipeline_cli.py  test_graph_pipeline_registry.py  test_harness_agentic_eval.py  test_harness_artifacts.py  test_harness_benchmark_registry.py  test_harness_helm_nightly.py  test_harness_runfiles.py  test_harness_slack.py  test_helm_max_upload_bytes.py  test_helm_shared_results.py  test_hf_model_registry.py  test_ingest_interface.py  test_ingest_manifest.py  test_ingest_plans.py  test_ingest_results.py  test_ingest_retrieve_multimodal_pdf_integration.py  test_lancedb_retrieval_where.py  test_lancedb_write_policy.py  test_llm_params.py  test_multimodal_embed.py  test_nemotron_ocr_v2_nightly.py  test_nv_ingest_vdb_operator.py  test_ocr_version_selection.py  test_operator_flags_and_cpu_actors.py  test_params_models.py  test_pipeline_graph.py  test_pipeline_helpers.py  test_probe_event_recording.py  test_readme_video_pipeline_example.py  test_retriever_queries.py  test_root_cli_workflow.py  (+15 more)
nemo_retriever/tests/query/: test_evidence.py
nemo_retriever/tests/service/utils/: test_file_type.py
(+29 files in other folders)
