[build-system]
requires = ["setuptools>=78.1.1", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
package = true
no-build-package = ["nemotron-ocr"]
# fastparquet 2026.3.0 has no wheel for Linux x86_64 (manylinux); constrain to last version that does.
override-dependencies = [
  "fastparquet>=2024.11.0,<2026",
  # Suppress opencv-python from transitive deps. nemotron wheels pull in both
  # opencv-python and opencv-python-headless, which stomp on the same cv2/ dir.
  # The 'never' marker makes uv treat this as unsatisfiable on all platforms.
  "opencv-python ; sys_platform == 'never'",
]

[project]
name = "nemo-retriever"
dynamic = ["version"]
description = "A modern RAG ingestion pipeline from Nvidia"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Jeremy Dyer", email = "jdyer@nvidia.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  # Core orchestration and framework
  "backoff",
  "ray[data,serve]>=2.49.0",
  "ffmpeg-python",
  "pandas>=2.0,<3",
  "sqlglot>=30.0.0",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
  "click>=8.2.0",
  "pyyaml>=6.0",
  # Service layer
  "fastapi>=0.114.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "prometheus-fastapi-instrumentator>=7.0,<8",
  "opentelemetry-api>=1.41.1",
  "opentelemetry-sdk>=1.41.1",
  "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
  # MCP server for AI agent integration
  "fastmcp>=2.0.0",
  # HTTP clients
  "httpx>=0.27.0",
  "requests>=2.32.5",
  "urllib3==2.7.0",
  # Utilities
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "universal-pathlib>=0.2.0",
  "numpy>=1.26.0",
  "debugpy>=1.8.0",
  "fsspec>=2025.5.1",
  "s3fs>=2025.5.1",
  # Core ingest packages
  # Document parsing and NIM client libs
  "pypdfium2==4.30.0",
  "pillow==12.2.0",
  "nltk==3.9.4",
  "markitdown",
  "langchain-nvidia-ai-endpoints>=1.4.0",
  # Default VDB solution
  "lancedb",
  # gRPC client for Parakeet/Riva ASR. Required for ASRCPUActor when it
  # targets the public NVCF Parakeet endpoint (the default) or any remote NIM.
  "nvidia-riva-client>=2.25.1",
]

[project.optional-dependencies]

# Core ``pip install nemo-retriever`` (no extras) supports remote HTTP NIM and the
# ``retriever pipeline`` CLI without ``tritonclient``. Triton gRPC is imported only
# when a gRPC client is constructed; install ``nemo-retriever[local]`` for on-box
# Triton + GPU stacks (``tritonclient`` is listed under ``local``).

# ── Service mode (remote NIMs over HTTP — no local GPU models) ───────────────
# Lightweight dependencies needed to run the FastAPI service with InprocessExecutor
# when all heavy inference is offloaded to remote NIM endpoints.  Excludes GPU
# frameworks (torch, vLLM), HuggingFace model weights (nemotron-*), and
# transformers to keep the container image small.
service = [
  # HTTP retry decorator used by NIM model interfaces
  "backoff",
  # Remote answer generation client used by serviceConfig.llm and /v1/answer
  "litellm>=1.86.0,<2",
  # Lightweight utilities used by pipeline operators
  "easydict",
  "addict",
  "scikit-learn>=1.6.0",
  "psutil>=5.9.0",
  "apscheduler>=3.10",
  # Audio resampling used by ParakeetClient
  "librosa>=0.10.2",
  # Explicitly avoid pulling older numba/llvmlite versions that precede python 3.12
  "numba>=0.59",
]

# ── Local model inference (GPU assumed; torch resolves to CUDA on Linux) ─────
# Stable Nemotron extraction package selection for published local installs.
local = [
  "transformers>=4.57.6,<5",
  "tokenizers>=0.21.1",
  "accelerate==1.12.0",
  "opencv-python-headless>=4.8.0",
  "torch==2.11.0; sys_platform == 'linux'",
  "torch==2.11.0; sys_platform == 'win32'",
  "torch==2.11.0; sys_platform == 'darwin'",
  "torchvision==0.26.0; sys_platform == 'linux'",
  "torchvision==0.26.0; sys_platform == 'win32'",
  "torchvision==0.26.0; sys_platform == 'darwin'",
  "tritonclient",
  "einops",
  "easydict",
  "addict",
  "scikit-learn>=1.6.0",
  "timm==1.0.22",
  "albumentations==2.0.8",
  "nemotron-page-elements-v3>=3.0.1,<4",
  "nemotron-table-structure-v1>=1.0.0,<2",
  "nemotron-ocr>=2.0.0,<3; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
  "nvidia-ml-py",
  "apscheduler>=3.10",
  "psutil>=5.9.0",
  # vLLM compiles CUDA kernels at runtime via torch inductor (requires Python.h).
  # Use a uv-managed Python (`uv python install 3.12`) so headers are available;
  # system Python installs typically omit them and will fail with InductorError.
  "vllm==0.20.0; sys_platform == 'linux'",
  # flashinfer and cubin versions must match
  "flashinfer-cubin==0.6.8.post1; sys_platform == 'linux'",
  "flashinfer-python==0.6.8.post1; sys_platform == 'linux'",
]

# ── Multimedia — audio/ASR and SVG rendering ────────────────────────────────
# soundfile + scipy enable local Parakeet ASR on audio/video content.
# cairosvg enables SVG-to-image rendering (requires libcairo system library).
multimedia = [
  "soundfile>=0.12.0",
  "scipy>=1.11.0",
  "cairosvg>=2.7.0",
  "librosa>=0.10.2",
  # Explicitly avoid pulling older numba/llvmlite versions that precede python 3.12
  "numba>=0.59",
]

# ── Nemotron Parse NIM client support ────────────────────────────────────────
# Required when using ``extract_method="nemotron_parse"``. Kept separate from
# the default install so remote-only deployments can opt into the visual parser
# client without pulling benchmarking tools.
nemotron-parse = [
  "open-clip-torch==3.2.0",
]

# ── Independent extras ───────────────────────────────────────────────────────

# SQL and graph storage backends (lancedb is in core deps).
tabular = [
  "duckdb>=1.2.0",
  "duckdb-engine>=0.13.0",
  "neo4j>=5.0",
  "langgraph>=1.2.0",
]

# BEIR benchmarking and evaluation tools (not needed for production use).
# Keep open-clip-torch here for compatibility with existing benchmark installs;
# the production-facing Nemotron Parse path uses the dedicated extra above.
benchmarks = [
  "datasets>=4.8.2",
  "open-clip-torch==3.2.0",
]

# ── LLM client (generation + judge) ──────────────────────────────────────────
# Install this if you want to call ``Retriever.answer()``, ``Retriever.pipeline()``,
# or construct an ``LLMJudge`` / ``LiteLLMClient`` directly.  Powers both the
# live-RAG SDK and the batch evaluation framework.
llm = [
  "litellm>=1.86.0,<2",
]

dev = [
  "build>=1.2.2",
  "pytest>=8.0.2",
]

# ── Convenience: full install ─────────────────────────────────────────────────
all = [
  "nemo_retriever[service,local,multimedia,nemotron-parse,tabular,benchmarks,llm]",
]

[project.scripts]
retriever = "nemo_retriever.__main__:main"
retriever-harness = "nemo_retriever.harness:main"

# uv-only developer install: include every published extra plus the published
# dev extra, then overlay the prerelease Nemotron selection without exposing it
# in wheel metadata.
[dependency-groups]
dev = [
  "nemo_retriever[all]",
  "nemo_retriever[dev]",
  "nemotron-page-elements-v3>=3.0.1.dev0,!=3.0.1,!=3.0.2,<4",
  "nemotron-table-structure-v1>=1.0.1.dev0,!=1.0.1,<2",
  "nemotron-ocr>=2.0.1.dev0,!=2.0.1,<3; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]

[tool.setuptools.dynamic]
version = {attr = "nemo_retriever.version.get_build_version"}

[tool.uv.sources]
# On Linux, resolve torch/torchvision from the CUDA wheel index.
# On Mac, fall through to PyPI to get CPU wheels.
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nemo_retriever.harness.portal" = ["static/**/*"]
"nemo_retriever.service" = ["retriever-service.yaml"]
"nemo_retriever.tools.skill_eval" = ["prompts/*.j2", "configs/*.yaml"]

[tool.pytest.ini_options]
# ``src`` exposes the ``nemo_retriever`` package (src layout). ``.`` keeps ``from tests import …``
# working when pytest rootdir is this project. Editable install (``pip install -e .``) is still
# recommended for scripts and non-pytest entry points.
pythonpath = ["src", "."]
addopts = "-m 'not integration'"
markers = [
  "integration: mark a test as an integration test",
]
